removed gdal, removed old scripts, update documents

--- a/GISBoundaryImporter/GIS Boundary Import Guide.html
+++ b/GISBoundaryImporter/GIS Boundary Import Guide.html
@@ -87,12 +87,8 @@
                         <li class="flex items-start">
                             <span class="text-sky-500 mr-3 mt-1">✓</span>
                             <div>
-                                <h4 class="font-semibold">GDAL or OSGeo4W</h4>
-                                The tool relies on the <code>ogr2ogr.exe</code> command-line utility to perform the conversion. You must have either the GDAL core components or OSGeo4W installed. The tool will attempt to auto-detect the installation.
-                                <ul class="list-disc pl-5 mt-2 text-sm">
-                                    <li><strong>Recommended:</strong> Install GDAL via the core MSI installer from <a href="http://www.gisinternals.com/release.php" target="_blank" class="text-blue-600 hover:underline">gisinternals.com</a>.</li>
-                                    <li><strong>Alternative:</strong> Install via the OSGeo4W installer.</li>
-                                </ul>
+                                <h4 class="font-semibold">OSGeo4W (required)</h4>
+                                The tool relies on the <code>ogr2ogr.exe</code> command-line utility to perform the conversion. You must have OSGeo4W installed (64-bit recommended). The tool will attempt to auto-detect the installation. Install from <a href="https://trac.osgeo.org/osgeo4w/" target="_blank" class="text-blue-600 hover:underline">OSGeo4W</a>.
                                 <p class="text-xs text-slate-500 mt-2">Unlike the legacy process, you do not need to manually set any environment variables; the tool handles this automatically.</p>
                             </div>
                         </li>
